# l2jimp1

./: CMakeLists.txt  api_comm.c  api_comm.h  csrrg.c  csrrg.h  documentaryEng.md  documentaryPl.md  graf.csrrg  graf.txt  graf_test.csrrg  graph_gen  graph_generator.c  graph_generator.h  graph_matrix.c  graph_matrix.h  main.c  utils.c  utils.h
